<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirty_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.android.melomania.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:weightSum="1"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/recommended_layout">

                <TextView
                    style="@style/label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/recommended" />

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_right" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recommended_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <View
                style="@style/line"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/most_popular_layout">

                <TextView
                    style="@style/label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/most_popular" />

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_right" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_most_popular_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                style="@style/line"/>

            <TextView
                style="@style/label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/news_feed" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_news_feed_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="go to login" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>